Fixes RTL graph alignment by setting dirs on the graphs, and changing which way the graphs align - (https://bugzilla.mozilla.org/show_bug.cgi?id=442966)
git-svn-id: https://translate.svn.sourceforge.net/svnroot/translate/src/branches/mozootle@7730 54714841-351b-0410-a198-e36a94b762f5

--- a/html/pootle.css
+++ b/html/pootle.css
@@ -653,7 +653,6 @@ span.translated {
   position: absolute; 
   top: 5px;
   height:100%; 
-  left: 0%; 
   background: #448844;
   background: url('images/green-bar.png');
   background-repeat: repeat-x;
@@ -688,4 +687,12 @@ span.untranslated {
   background: url('images/red-bar.png');
   background-repeat: repeat-x;
   color: black;
+}
+
+span.graph[dir="ltr"] span.translated {
+  left: 0%;
+}
+
+span.graph[dir="rtl"] span.translated {
+  right: 0%;
 }
